--- a/styles/style.css
+++ b/styles/style.css
@@ -8,15 +8,19 @@ body {
 }
 main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 .container {
   background-color: #ffffff;
   width: 870px;
   padding: 30px;
+  margin-top: 21px;
+  border-radius: 5px;
 }
 hr {
   border: 1px solid #d1d1d1;
+  margin-bottom: 27px;
 }
 /* top players style start */
 .top-players {
@@ -47,6 +51,11 @@ hr {
 /* top players style end */
 
 /* top blogs styles */
+.blogs {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 26px;
+}
 .blog {
   display: flex;
 }
@@ -66,6 +75,68 @@ hr {
 }
 .blog-author a {
   text-decoration: none;
-  color: #9f9f9f;
+  font-size: 16px;
+  color: #562eff;
 }
 /* top blogs end */
+
+/* cousrses style */
+.courses {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 24px;
+}
+
+.course .course-banner img {
+  width: 266px;
+  height: 141px;
+}
+.course-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.fa-star {
+  font-size: 12px;
+}
+.fa-star.filled {
+  color: #ffc014;
+}
+.fa-star.empty {
+  color: #aeaeae;
+}
+/* cousrses end */
+
+/*-------------------- 
+      Media Queries 
+----------------------*/
+
+/* Mobile Device */
+@media only screen and (max-width: 688px) {
+  .container {
+    width: 100%;
+  }
+  .players,
+  .blogs,
+  .courses {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .player,
+  .blog {
+    flex-direction: column;
+  }
+}
+
+/* tablet devices */
+@media only screen and (min-width: 688px) and (max-width: 992px) {
+  .container {
+    width: 100%;
+  }
+  .players,
+  .courses {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .blogs {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
